--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <div class="row">
             <div class="col-md-12 text-center heading-wrap">
               <h2>Daftar Menu</h2>
-              <span class="back-text-dark"> Menu</span>
+<!--               <span class="back-text-dark"> Menu</span> -->
             </div>
           </div>
         </div>
