--- a/pemesanan.html
+++ b/pemesanan.html
@@ -77,7 +77,7 @@
           <div class="row">
             <div class="col-md-12 text-center heading-wrap">
               <h2>Hubungi Kami</h2>
-              <span class="back-text">Hubungi Kami</span>
+<!--               <span class="back-text">Hubungi Kami</span> -->
             </div>
           </div>
         </div>
