--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <div class="row">
             <div class="col-md-12 text-center heading-wrap">
               <h2>Ulasan Pelanggan</h2>
-              <span class="back-text">ulasan</span>
+<!--               <span class="back-text">ulasan</span> -->
             </div>
           </div>
         </div>
