--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a class="nav-link" href="pemesanan.html">Pemesanan</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="layanan.htmlpe">Layanan</a>
+                <a class="nav-link" href="layanan.html">Layanan</a>
               </li>
             </ul>
             
