--- a/pemesanan.html
+++ b/pemesanan.html
@@ -54,7 +54,7 @@
     </header>
     <!-- END header -->
     
-    <section class="home-slider-loop-false  inner-page owl-carousel">
+    <section class="home-slider-static">
       <div class="slider-item" style="background-image: url('img/hero_2.jpg');">
         
         <div class="container">
