--- a/produk.html
+++ b/produk.html
@@ -52,7 +52,7 @@
     </header>
     <!-- END header -->
     
-    <section class="home-slider-loop-false  inner-page owl-carousel">
+    <section class="home-slider-static">
       <div class="slider-item" style="background-image: url('img/hero_2.jpg');">
         
         <div class="container">
