--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
             <div class="col-md-8 text-center col-sm-12 element-animate">
-              <h1>Kelezatan Tiada Tanding</h1>
-              <p class="mb-5">Nikmati berbagai macam roti dan kue dengan cita rasa yang sempurna dan bahan berkualitas tinggi. Cheers Up Bakery hadir untuk memanjakan Anda.</p>
+              <h1>Chef Handal</h1>
+              <p class="mb-5">Kami berkomitmen memberikan roti dan kue terbaik yang dibuat oleh para ahli kami. Setiap gigitan menghadirkan kelezatan dan kebahagiaan.</p>
               <p><a href="pemesanan.html" class="btn btn-white btn-outline-white">Pesan Sekarang</a></p>
             </div>
           </div>
