--- a/produk.html
+++ b/produk.html
@@ -58,6 +58,7 @@
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
             <div class="col-md-8 text-center col-sm-12 element-animate">
+              <h1>Produk Berkualitas Terbaik Tersedia Pada Toko Kami</h1>
               
             </div>
           </div>
